# PhysicsPlayground

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  azure-pipelines.yml
CMake/Modules/: FindPhysx.cmake
Src/: graphics.cpp  graphics.h  main.cpp
shaders/: fs_cubes.sc  varying.def.sc  vs_cubes.sc
src/: graphics.cpp  graphics.h  main.cpp  simulationWorld.cpp  simulationWorld.h
